--- a/assets.css/style.css
+++ b/assets.css/style.css
@@ -132,8 +132,23 @@ margin-left: -15px;
   background-color: #fff;
   padding: 50px;
 }
+.article{
+  -ms-flex: 70%; 
+  flex: 70%;
+  background-color: white;
+  padding: 20px
+  text-align: left;
+}
 
-/* Dropdown Button */
+
+
+
+
+
+
+
+
+
 .dropbtn {
   background-color: #04AA6D;
   color: white;
@@ -142,13 +157,13 @@ margin-left: -15px;
   border: none;
 }
 
-/* The container <div> - needed to position the dropdown content */
+
 .dropdown {
   position: relative;
   display: block;
 }
 
-/* Dropdown Content (Hidden by Default) */
+
 .dropdown-content {
   display: none;
   position: absolute;
@@ -158,7 +173,7 @@ margin-left: -15px;
   z-index: 1;
 }
 
-/* Links inside the dropdown */
+
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -166,13 +181,12 @@ margin-left: -15px;
   display: block;
 }
 
-/* Change color of dropdown links on hover */
+
 .dropdown-content a:hover {background-color: #ddd;}
 
-/* Show the dropdown menu on hover */
+
 .dropdown:hover .dropdown-content {display: block;}
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 
