--- a/assets.css/style.css
+++ b/assets.css/style.css
@@ -136,14 +136,25 @@ margin-left: -15px;
   -ms-flex: 70%; 
   flex: 70%;
   background-color: white;
-  padding: 20px
-  text-align: left;
+  padding: 20px;
+  text-align: center;
+
+}
+.welread{
+  -ms-flex: 70%; 
+  flex: 70%;
+  background-color: white;
+  padding: 20px;
+  text-align: justify;
+  float:left;
+}
+.sidecontent{
+  text-align: center;
 }
 
-
-
-
-
+p {
+  text-indent: 50px;
+}
 
 
 
