--- a/assets.css/style.css
+++ b/assets.css/style.css
@@ -84,8 +84,9 @@ margin-left: -15px;
 .side {
   -ms-flex: 20%; 
   flex: 20%;
-  background-color: green;
+  background-color:#d63447 ;
   padding: 10px;
+  color:#f1f1f1
 }
 
 
@@ -94,6 +95,8 @@ margin-left: -15px;
   flex: 70%;
   padding: 20px;
   float:left;
+  background-color:#005792;
+  color:#fff;
 }
 
 
@@ -164,13 +167,13 @@ p {
 
 .dropdown {
   position: relative;
-  display: block;
+  display: r;
 }
 
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: relative;
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -198,5 +201,38 @@ p {
 div.third {
   background: rgba(0, 128, 0, 0.6);
 }
+/* (A) STANDARD ROW HEIGHT */
+.vwrap, .vitem {
+  height: 30px;
+  line-height: 30px;
+}
+ 
+/* (B) FIXED WRAPPER */
+.vwrap {
+  overflow: hidden; /* HIDE SCROLL BAR */
+  background: #eee;
+}
+/* (C) TICKER ITEMS */
+.vitem { text-align: center; }
+ 
+/* (D) ANIMATION - MOVE ITEMS FROM TOP TO BOTTOM */
+/* CHANGE KEYFRAMES IF YOU ADD/REMOVE ITEMS */
+.vmove { position: relative; }
+@keyframes tickerv {
+  0% { bottom: 0; } /* FIRST ITEM */
+  30% { bottom: 30px; } /* SECOND ITEM */
+  60% { bottom: 60px; } /* THIRD ITEM */
+  90% { bottom: 90px; } /* FORTH ITEM */
+  100% { bottom: 0; } /* BACK TO FIRST */
+}
+.vmove {
+  animation-name: tickerv;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(1, 0, .5, 0);
+}
+.vmove:hover { animation-play-state: paused; }
+
+
 
 
